# hopfield-mnist

./: .gitignore  LICENSE  README.md  hopfield.py  mnist.py  pyproject.toml
MNIST/: hopfield4gif.py  mnist.py
