[tool.poetry]
name = "hopfield-mnist"
version = "0.1.0"
description = ""
authors = ["kencyke <casek2703@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
